# AutoScience

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
data/splits/: covertype_seed42_n581012.npz  diabetes_seed42_n442.npz  wine_seed42_n178.npz
docs/: design.md
experiments/: benchmark_full.yaml  benchmark_local.yaml  benchmark_smoke.yaml
experiments/baselines/: expert.yaml
notebooks/: run_benchmark.ipynb
reports/: benchmark_report.md
src/autoscience/: __init__.py  benchmark.py  cli.py  scaling.py
src/autoscience/data/: __init__.py  commands.py  loaders.py  registry.py  schema.py  splits.py
src/autoscience/evaluation/: __init__.py  audit.py  calibration.py  metrics.py  stats.py  uncertainty.py
src/autoscience/features/: __init__.py  selection.py
src/autoscience/hpo/: __init__.py  budgets.py  pipeline.py  runner.py  spaces.py
src/autoscience/models/: __init__.py  torch_mlp.py  zoo.py
src/autoscience/preprocessing/: __init__.py  auto.py
src/autoscience/profiling/: __init__.py  profiler.py
src/autoscience/reporting/: __init__.py  report.py  style.py
src/autoscience/tracking/: __init__.py  mlflow_utils.py  registry.py
src/autoscience/utils/: __init__.py  logging.py  paths.py  seed.py
tests/: test_benchmark.py  test_cli.py  test_data.py  test_evaluation.py  test_features.py  test_models.py  test_preprocessing.py  test_registry_scaling.py  test_report.py  test_runner.py  test_seed.py  test_stats.py
