[project]
name = "autoscience"
version = "0.1.0"
description = "Automated ML pipeline for scientific datasets: preprocessing, feature selection, model training, and HPO with full MLflow experiment tracking."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Ayush Mishra" }]
dependencies = [
    "scikit-learn>=1.5",
    "xgboost>=2.1",
    "torch>=2.4",
    "optuna>=4.0",
    "mlflow>=2.16",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "pandas>=2.2",
    "pyarrow>=17.0",
    "openml>=0.15",
    "typer>=0.12",
    "rich>=13.0",
    "psutil>=6.0",
    "scipy>=1.14",
    "matplotlib>=3.9",
    "scikit-posthocs>=0.9",
]

[project.scripts]
autoscience = "autoscience.cli:app"

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pre-commit>=3.8",
    "pandas-stubs>=2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autoscience"]

# CPU-only torch wheels everywhere (small, fast installs for dev/CI).
# The Colab/cloud runner swaps in a CUDA build after `uv sync`.
[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF", "NPY", "PD"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["autoscience"]
mypy_path = "src"
# Scientific stack ships incomplete stubs; keep strictness on our own code.
[[tool.mypy.overrides]]
module = [
    "sklearn.*",
    "xgboost.*",
    "optuna.*",
    "mlflow.*",
    "openml.*",
    "scipy.*",
    "joblib.*",
    "matplotlib.*",
    "scikit_posthocs.*",
    "hydra.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "slow: long-running tests (deselect with '-m \"not slow\"')",
    "integration: end-to-end pipeline tests",
]

[tool.coverage.run]
source = ["src/autoscience"]
